fixed overflow issue

--- a/css/general.css
+++ b/css/general.css
@@ -32,7 +32,6 @@ p {
 .scrollToTop-btn {
   z-index: 99999;
   position: fixed;
-  right: 0;
   bottom: 20px;
   width: 35px;
   height: 35px;
@@ -232,20 +231,6 @@ nav .logo {
 .d-none {
   display: none !important;
 }
-
-/* .left-nav-links,
-.right-nav-links {                                                                                                                                                                                          
-  animation: 2s ease-out 0s 1 slideInLeft;
-}
-
-@keyframes slideInLeft {
-  0% {
-    transform: translateX(-100%);
-  }
-  100% {
-    transform: translateX(0);
-  }
-} */
 
 /*Nav responsiveness*/
 @media only screen and (max-width: 768px) {
